8403
The parser wont accept annotation with paramers:

{{cat A.scala}}

{code}
import scala.annotation.meta.param
import scala.annotation.StaticAnnotation
class Foo(a: Int) extends StaticAnnotation
case class Anotated(@(Foo(1) @param) p1: Int)
{code}

{{/nix/store/22dsrlsqp33kqarh4cb9d7dis4kwgvma-scala-2.10.4/bin/scalac A.scala}}
{noformat}
A.scala:4: error: ')' expected but '(' found.
case class Anotated(@(Foo(1) @param) p1: Int)
                         ^
A.scala:4: error: identifier expected but ')' found.
case class Anotated(@(Foo(1) @param) p1: Int)
                                   ^
A.scala:4: error: ':' expected but eof found.
case class Anotated(@(Foo(1) @param) p1: Int)
                                             ^
three errors found
{noformat}

{{/nix/store/8ws1mx6fvgf3hijc49356vmm2q4zxzcj-scala-2.11.6/bin/scalac A.scala}}
{noformat}
A.scala:4: error: ')' expected but '(' found.
case class Anotated(@(Foo(1) @param) p1: Int)
                         ^
A.scala:4: error: identifier expected but ')' found.
case class Anotated(@(Foo(1) @param) p1: Int)
                                   ^
A.scala:4: error: ':' expected but eof found.
case class Anotated(@(Foo(1) @param) p1: Int)
                                             ^
three errors found
{noformat}
